Changes for SPECPUB-7 - bibtex & references.

--- a/docs/task_planning/master02-background.adoc
+++ b/docs/task_planning/master02-background.adoc
@@ -37,7 +37,7 @@ To meet this need, a further kind of content can be recorded in the EHR, represe
 
 In order to respond to the need to formally represent clinical Task Plans, and to close the gap between orders and reported actions in openEHR, this specification provides a model of a _task planning_ facility, which is conceptually situated in a larger semantic framework that includes entities at multiple levels, i.e.:
 
-* _care pathway_ - a structured description of care of a condition / ideal patient, typically including or referring to one or more _guidelines_ that describe in detail how to deal with specific situations within the condition;
+* _care pathway_ - a structured description of care of a condition / ideal patient, typically including or referring to one or more _guidelines_ that describe in detail how to deal with specific situations within the condition cite:[Schrijvers_et_al2012];
 * _care plan_ - a general plan for care of an actual patient, possibly using published Care Pathways and/or guidelines and taking into account individual specificities;
 * _task plan_ - a concrete definition of a set of fine-grained planned tasks for one or more actors to perform over time to achieve a particular goal.
 
@@ -132,7 +132,7 @@ Two conclusions can be drawn from the above. The first is that variable worker a
 
 == Relationship to Workflow Formalisms and Systems
 
-This specification describes a model for a 'task plan' concept that incudes support for work distribution across multiple performers, nested task plans, conditional branching, timing and various other facilities. Many of these are conceptually close to the features found in standard workflow languages such as {bpmn}[BPMN] (Business Process Modelling Notation) and {yawl}[YAWL] (Yet another Workflow Language), as well as emerging case-based standards such as {cmmn}[CMMN] (Case Management Modelling Notation) and {dmn}[DMN] (Decision Model and Notation). Of these, YAWL is the most comprehensive in its design and the most useful source of concepts for the current specification.
+This specification describes a model for a 'task plan' concept that incudes support for work distribution across multiple performers, nested task plans, conditional branching, timing and various other facilities. Many of these are conceptually close to the features found in standard workflow languages such as {omg_bpmn}[OMG BPMN (Business Process Modelling Notation)^] and {yawl}[YAWL (Yet another Workflow Language)^] cite:[Hofstede_van_der_Aalst2009], as well as emerging case-based standards such as {omg_cmmn}[OMG CMMN (Case Management Modelling Notation)^] and {omg_dmn}[OMG DMN (Decision Model and Notation)^]. Of these, YAWL is the most comprehensive in its design and the most useful source of concepts for the current specification.
 
 While the model described here takes ideas from these languages, there are some key differencs as well. The primary conceptual difference is that the subject (i.e. 'case') here is assumed to be a) an intentional agent (generally a human patient) that makes choices, and b) an active biological organism, which reacts to drugs and other interventions. In other words, an entity that cannot be considered a passive object (such as a package or blood sample), as is the case for most logistic workflows, for which languages such as BPMN are designed. (Note that even the patient can be a passive object in some circumstances, such as radiology.) Other departures include the use of a declarative rather than prescriptive means of defining the plan graph structure, and the formalisation of all elements of a plan and its execution.
 
