--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -73,7 +73,7 @@ Many of the design ideas presented in this specification came from analysis of u
 
 Additionally the Activity-Based Design (ABD) project at Intermountain Healthcare (2015-), on which the primary author worked part time proved an important source of cross-fertilisation. The latter project is led by David Edwards and Alan James (chief architect), within the clinical quality program, under Dr Brent James, Chief Quality Officer at Intermountain Healthcare. ABD has a sophisticated architecture based on a custom archetype / template framework, adaptive workflow concepts, application generation and real-time speech recognition. It has pioneered a number of concepts used in the current specification, including the separation of definition, materialised and runtime levels of representation.
 
-Lastly, a review of research literature and standards was conducted. Many of the ideas in YAWL <<Hofstede_van_der_Aalst_2009>> and its underlying research influenced this specification. The authors also reviewed various standards, including the OMG's {bpmn}[BPMN] and {cmmn}[CMMN].
+Lastly, a review of research literature and standards was conducted. Many of the ideas in YAWL cite:[Hofstede_van_der_Aalst2009] and its underlying research influenced this specification. The authors also reviewed various standards, including the OMG's {omg_bpmn}[BPMN^] and {omg_cmmn}[CMMN^].
 
 === Trademarks
 
@@ -120,4 +120,5 @@ include::master12-ehr_semantics.adoc[leveloffset=+1]
 //
 :sectnums!:
 == References
-include::{ref_dir}/docs/references/publications_workflow.adoc[leveloffset=+1]
+
+bibliography::[]
