Changes for SPECPROC-30 - Adjustments to Events model;
Changes to REMINDER model.

--- a/docs/UML/classes/plan_event.adoc
+++ b/docs/UML/classes/plan_event.adoc
@@ -18,4 +18,8 @@ h|*Attributes*
 h|*0..1*
 |*other_details*: `ITEM_STRUCTURE`
 a|
+
+h|*0..1*
+|*delay*: `Iso8601_duration`
+a|Length of the delay.
 |===
