--- a/docs/UML/classes/timer_wait.adoc
+++ b/docs/UML/classes/timer_wait.adoc
@@ -19,4 +19,10 @@ h|*1..1 +
 (redefined)*
 |*event*: `TIMER_EVENT`
 a|Redefined from `EVENT_WAIT`.
+
+h|*Invariants*
+2+a|*_Inv_no_timeout_*: `timeout = Void`
+
+h|
+2+a|*_Inv_has_action_*: `success_action /= Void`
 |===
