CHanges for SPECPROC-31 - Simplifications to Conditional structures;

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -14,10 +14,6 @@
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_archetype_hrid_class[ARCHETYPE_HRID^]
 [.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_blocking_branch_class[BLOCKING_BRANCH^]
-[.xcode]
-* link:/releases/PROC/{proc_release}/task_planning.html#_blocking_group_class[BLOCKING_GROUP^]
-[.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_boolean_context_expression_class[BOOLEAN_CONTEXT_EXPRESSION^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_calendar_entry_class[CALENDAR_ENTRY^]
@@ -167,6 +163,8 @@
 * link:/releases/PROC/{proc_release}/task_planning.html#_query_call_class[QUERY_CALL^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_reminder_class[REMINDER^]
+[.xcode]
+* link:/releases/PROC/{proc_release}/task_planning.html#_reminder_chain_class[REMINDER_CHAIN^]
 [.xcode]
 * link:/releases/PROC/{proc_release}/task_planning.html#_resource_participation_class[RESOURCE_PARTICIPATION^]
 [.xcode]
