--- a/docs/UML/classes/adhoc_branch.adoc
+++ b/docs/UML/classes/adhoc_branch.adoc
@@ -9,6 +9,9 @@ h|*Description*
 2+a|A specialised kind of `TASK_GROUP` representing a branch in an Ad Hoc Group.
 
 h|*Inherit*
-2+|`BLOCKING_BRANCH`
+2+|`CHOICE_BRANCH`
 
+
+h|*Invariants*
+2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
 |===
