Changes for SPECPROC-30 - Adjustments to Events model;
Finalise REMINDER model for now - based on any transition of owning Task.

--- a/docs/UML/classes/plan_item.adoc
+++ b/docs/UML/classes/plan_item.adoc
@@ -46,6 +46,6 @@ h|*0..1*
 a|Archetypable structure for recording non hard-modelled information.
 
 h|*0..1*
-|*reminders*: `REMINDER`
-a|One or more wait states that may be used to remind the Task performer to do something based on a Timer or other Event. Will be cancelled by the Task transitioning to a terminal state.
+|*reminders*: `List<REMINDER>`
+a|Optional wait state(s) that may be used to remind the Task performer to do something based on a Timer or other Event. Will be cancelled by the Task transitioning to any new state from the `available` state, due to performer activity.
 |===
