--- a/docs/UML/classes/system_call.adoc
+++ b/docs/UML/classes/system_call.adoc
@@ -20,15 +20,9 @@ h|*1..1*
 |*system_id*: `String`
 a|Identifier of target system, typically a domain name.
 
-h|*1..1*
-|*call_name*: `String`
-a|Name of call in API.
-
 h|*0..1*
-|*definition*: 
+|*definition*: `BMM_FUNCTION`
 a|Signature definition of call.
-
-TODO: to be defined.
 
 h|*0..1*
 |*parameter_map*: `List<PARAMETER_MAPPING>`
