--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -48,13 +48,14 @@ include::master00-amendment_record.adoc[leveloffset=+1]
 
 This specification benefited from formal and informal input from the openEHR and wider health informatics community. The openEHR Foundation would like to recognise the following people for their contributions.
 
+* Danielle Santos Alves, RN, midwife, Federal University of Pernambuco (UFPE), Brazil
 * Borut Fabjan, Program Manager, Marand, Slovenia
 * Matija Kejžar, Marand, Slovenia
 * Bostjan Lah, Architect, Marand, Slovenia
 * Eugeny Leonov, Solit Clouds, Moscow, Russia
 * Ian McNicoll MD, FreshEHR, UK
 * Bjørn Næss, DIPS, Norway
-* Pablo Pazos Gutierrez, CaboLabs, Uruguay
+* Pablo Pazos Gutierrez, Senior engineer, CaboLabs, Uruguay
 * Pekka Pesola, Engineer, Tieto, Finland
 * Vladimir V Makarov, Department of Information Technologies, City of Moscow
 
