--- a/docs/decision_language/master02-overview.adoc
+++ b/docs/decision_language/master02-overview.adoc
@@ -22,7 +22,7 @@ In the above, three logical components of the Decision Language are identified:
 
 == Prior Art
 
-The openEHR DL formalism is a small language that builds upon the {openehr_expression_language}[openEHR Expression Language^], whose meta-model is defined in the {openehr_bmm}[openEHR Basic Meta-Model (BMM)^]. DL adds constructs for representing statements, including control structures, modules, importation and binding.
+The openEHR DL formalism is a small language that builds upon the {openehr_expression_language}[openEHR Expression Language^], whose meta-model is defined in the {openehr_bmm}[openEHR Basic Meta-Model (BMM)^]. DL adds constructs for representing conditions, decisions, modules, importation and binding.
 
 openEHR DL may be compared to other languages developed in the health arena for expressing 'medical logic', including {hl7v3_arden}[HL7 Arden Syntax^], Guideline Interchange Format cite:[GLIF], ProForma cite:[SuttonFox2003], as well as decision support languages such as {hl7v3_gello}[HL7 Gello^]. These languages were not directly used, for various reasons including:
 
